{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 143,
  "lineage": "1cf40743-244a-7190-c95b-9e84515d23a0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-frontend-servers",
            "location": "westeurope",
            "name": "nsg-subnet-frontend-servers",
            "resource_group_name": "rg-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-frontend-servers/securityRules/test123",
            "name": "test123",
            "network_security_group_name": "nsg-subnet-frontend-servers",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-demo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-demo",
            "virtual_network_name": "vnet-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-frontend-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers",
            "name": "subnet-frontend-servers",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-demo",
            "virtual_network_name": "vnet-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "95c1b13f-47b0-4a28-b1c4-cf81dad1006a",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/virtualNetworks/vnet-spoke",
            "location": "westeurope",
            "name": "vnet-spoke",
            "resource_group_name": "rg-demo",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/27",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-AzureBastionSubnet-nsg-westeurope"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers",
                "name": "subnet-frontend-servers",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-subnet-frontend-servers-nsg-westeurope"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-bastion/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.180.74.38",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-bastion",
            "resource_group_name": "rg-bastion",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.bastion.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-01",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-vm-01/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "h4y2dfnqi2uevmoez4a3vuianc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-F3-43-41",
            "name": "nic-vm",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-vm-01",
            "virtual_machine_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-vm-01/providers/Microsoft.Compute/virtualMachines/vm-01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-frontend-servers",
            "azurerm_virtual_network.vnet",
            "module.vm-01.azurerm_public_ip.pip_vm",
            "module.vm-01.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-02",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-vm-02/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "h4y2dfnqi2uevmoez4a3vuianc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-demo/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-8F-D4-DB",
            "name": "nic-vm",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-vm-02",
            "virtual_machine_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-vm-02/providers/Microsoft.Compute/virtualMachines/vm-02"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-frontend-servers",
            "azurerm_virtual_network.vnet",
            "module.vm-02.azurerm_public_ip.pip_vm",
            "module.vm-02.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}